--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styleBasic.css">
+    <link rel="stylesheet" href="css/styleIndex.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <title>Inicio</title>
 </head>
+
 <body>
-    
+    <header class="cabecera">
+        <p>Beatbox</p>
+    </header>
+    <div class="cont-padre">
+
+        <div class="contenedor" id="c1">
+            <img src="images/ProtadaMarcas.png" alt="">
+        </div>
+        <div class="contenedor" id="c2">
+            <p class="text">Esta es una web que tiene como objetivo brindar información a la comunidad de beatboxers
+                nacionales e
+                internacionales, así como a cualquier persona interesada en este arte.
+                En ella podrás encontrar una amplia variedad de contenido, desde artículos y videos informativos hasta
+                reseñas de eventos y entrevistas a beatboxers.
+                Además, en la sección de recursos podrás encontrar una gran cantidad de material útil para el beatbox,
+                como tutoriales, libros y bases de sonido.
+                Completa el formularío y registrate como miembro en la comunidad
+            </p>
+        </div>
+        <div class="contenedor" id="c3">
+            <p>Para estar al día de más información sobre beatbox, eventos, competiciones, artista nacionales e
+                internacionales y mucho más...</p>
+            <p>
+                ¡Esperamos que disfrutes de la web!
+            </p>
+        </div>
+    </div>
+    <div class="contenedor-registro" id="btn-registro">
+        <button class="btn-registro">
+            <span id="linea1"></span>
+            <span id="linea2"></span>
+            <span id="linea3"></span>
+            <span id="linea4"></span>
+            <p class="registrate">registrate</p>
+        </button>
+    </div>
+    <div class="contenedor" id="userPass">
+        <form id="acceso">
+            <p id="titulo"></p>
+            <p>Usuario:</p>
+            <input type="text" id="user">
+            <p>Contraseña:</p>
+            <input type="password" id="pass">
+            <p id="alert"></p>
+            <img id="btn-accede" src="images/login.png"/>
+            <img id="btn-reg" src="images/register.png"/>
+        </form>
+    </div>
+    <div class="footer">
+        <p>Parte del texto contenido en esta web esta generado con GPT-3 un modelo IA aún en fase beta <a
+                href="https://openai.com/api/" target="_blank">Página oficial</a></p>
+        <img src="images/Logo2.0.png" alt="">
+    </div>
+    <script src="js/scIndex.js"></script>
 </body>
+
 </html>
